--- a/graph/graph_4.tex
+++ b/graph/graph_4.tex
@@ -20,7 +20,8 @@
 			ylabel={$I_a$, мА},
 			xmin=-6, xmax=6,
 			ymin=-5, ymax=25,
-			minor tick num=9, 
+			minor x tick num=9,
+			minor y tick num=10,
 			minor grid style={gray!85, very thin},
 			grid=both,
 			grid style={black!50, thin},
