--- a/source/practice/1_triode_parameters.tex
+++ b/source/practice/1_triode_parameters.tex
@@ -76,7 +76,11 @@
 \end{gather} 
 \[S_\text{ср} = (6,06 \pm 1,65)~\frac{\text{мА}}{\text{В}}\]
 
-На \cref{fig:1a} представлен график зависимости \(I_a(U_a)\) с нанесенными экспериментальными точками и областями погрешностей измерений. Теоретическая кривая построена в соответствии с уравнением \cref{eq:52}, из анализа которого определен параметр \(B\) (см. \cref{app:5}):
+На \cref{fig:1a} представлен график зависимости \(I_a(U_a)\) с нанесенными экспериментальными точками и областями погрешностей измерений. Теоретическая кривая (пунктир) построена в соответствии с уравнением \cref{eq:52}, из анализа которого определен параметр \(B\) (см. \cref{app:5}):
 \[B = (0,97 \pm 0,05)~\frac{\text{мА}}{\text{В}^{3/2}}\]
+
+Закон трёх вторых не применим в области отрицательных и малых положительных (единицы В) анодных напряжений. Из закона следует, что при нулевом напряжении ток анода должен быть равен нулю, а при отрицательном напряжении формула трёх вторых вообще не определена. В реальных диодах при нулевом анодном напряжении уже течёт ненулевой ток электронов от катода к аноду $-$ это явление называется эффектом Эдисона. Полная отсечка тока наступает только тогда, когда анодное напряжение опускается на несколько В ниже нуля. 
+
+Сдвиг характеристики диода влево на $-1,5~\text{В}$ может быть объяснён неэквипотенциальностью катода прямого накала. В 1914 году Уилсон, анализируя ВАХ прямонакальных диодов, предложил уточнённую модель, основанную на формуле Чайлда. В модели Уилсона ток на начальном участке ВАХ пропорционален напряжению в степени $5/2$, а в области средних напряжений ВАХ совпадает с законом трёх вторых. Дополнительный сдвиг характеристики влево на $-0,5~\text{В}$ в рамках модели Чайлда объяснить невозможно. Этот сдвиг — следствие ненулевых начальных скоростей и тепловой диффузии электронов. Ток, текущий сам по себе в диоде с заземлённым анодом — это ток быстрых электронов, способных преодолеть потенциальную яму пространственного заряда. Добавим сдвиг на $-1,5~\text{В}$ в наше предсказание, на рисунке эта кривая представлена сплошной кривой.
 
 Сравнение экспериментальных данных с теоретической зависимостью показывает их удовлетворительное согласование в исследованном диапазоне напряжений, что подтверждает адекватность примененной теоретической модели.
