--- a/source/practice/5_amplifier_frequency_response_measurement.tex
+++ b/source/practice/5_amplifier_frequency_response_measurement.tex
@@ -6,7 +6,7 @@
 \end{equation}
 
 \newpage
-\begin{table}[H]
+\begin{table}[t]
 	\centering
 	\caption{Снятие амплитудно-частотной характеристики усилителя}
 	\label{tab:5}
